--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "loader":{
+              ".ttf": "binary"
+            },
             "outputPath": "dist/pylab_project",
             "index": "src/index.html",
             "browser": "src/main.ts",
