--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/lodash": "^4.17.7",
     "@types/node": "^20.14.11",
     "@types/uuid": "^10.0.0",
+    "file-loader": "^6.2.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
