--- a/.github/workflows/angular-deploy.yml
+++ b/.github/workflows/angular-deploy.yml
@@ -21,4 +21,9 @@ jobs:
         run: npm install -g @angular/cli
 
       - name: Build
-        run: ng build --configuration=production
+        run: ng build --configuration=production --base-href /<nombre-repositorio>/
+
+      - name: Deploy to GitHub Pages
+        run: npx angular-cli-ghpages --dir=dist/<nombre-repositorio>
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
