--- a/.github/workflows/angular-deploy.yml
+++ b/.github/workflows/angular-deploy.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm install -g @angular/cli
 
       - name: Build
-        run: ng build --configuration=production --base-href /<nombre-repositorio>/
+        run: ng build --configuration=production --base-href /pylab-deploy/
 
       - name: Deploy to GitHub Pages
         run: npx angular-cli-ghpages --dir=dist/<nombre-repositorio>
