--- a/.github/workflows/angular-deploy.yml
+++ b/.github/workflows/angular-deploy.yml
@@ -11,7 +11,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
       - name: Install dependencies
@@ -21,9 +20,12 @@ jobs:
         run: npm install -g @angular/cli
 
       - name: Build
-        run: ng build --configuration=production --base-href /pylab-deploy/
+        run: ng build --configuration=production --base-href /<nombre-repositorio>/
+
+      - name: List files
+        run: ls -R dist/pylab_project
 
       - name: Deploy to GitHub Pages
-        run: npx angular-cli-ghpages --dir=dist/pylab-deploy
+        run: npx angular-cli-ghpages --dir=dist/pylab_project
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
