--- a/.github/workflows/angular-deploy.yml
+++ b/.github/workflows/angular-deploy.yml
@@ -21,9 +21,11 @@ jobs:
 
       - name: Build
         run: ng build --configuration=production --base-href /pylab-deploy/
-      
-      - name: List files
-        run: ls -R dist/pylab-deploy
+
+      - name: Configure Git
+        run: |
+          git config --global user.email "${{ secrets.GITHUB_EMAIL }}"
+          git config --global user.name "${{ secrets.GITHUB_NAME }}"
 
       - name: Deploy to GitHub Pages
         run: npx angular-cli-ghpages --dir=dist/pylab-deploy --no-silent
