--- a/.github/workflows/angular-deploy.yml
+++ b/.github/workflows/angular-deploy.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config --global user.email "${{ secrets.GITHUB_EMAIL }}"
-          git config --global user.name "${{ secrets.GITHUB_NAME }}"
+          git config --global user.email "${{ secrets.GH_EMAIL }}"
+          git config --global user.name "${{ secrets.GH_NAME }}"
 
       - name: Deploy to GitHub Pages
         run: npx angular-cli-ghpages --dir=dist/pylab-deploy --no-silent
