--- a/.github/workflows/angular-deploy.yml
+++ b/.github/workflows/angular-deploy.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Deploy to GitHub Pages
         run: |
-          npx angular-cli-ghpages --dir=dist/pylab-deploy
+          npx angular-cli-ghpages --dir=dist/pylab-deploy --no-silent
           # Move index.html to root if it's in the 'browser' folder
           if [ -f dist/pylab-deploy/browser/index.html ]; then
             mv dist/pylab-deploy/browser/index.html dist/pylab-deploy/index.html
