--- a/.github/workflows/angular-deploy.yml
+++ b/.github/workflows/angular-deploy.yml
@@ -21,7 +21,12 @@ jobs:
 
       - name: Build
         run: ng build --configuration=production
-
+        
+      - name: Configure Git
+        run: |
+          git config --global user.email "${{ secrets.GH_EMAIL }}"
+          git config --global user.name "${{ secrets.GH_NAME }}"
+          
       - name: Deploy to GitHub Pages
         run: |
           npx angular-cli-ghpages --dir=dist/pylab-deploy --no-silent
