--- a/angular.json
+++ b/angular.json
@@ -29,8 +29,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              { "glob": "**/*", "input": "node_modules/monaco-editor", "output": "assets/monaco/" },
-              { "glob": "**/*.css", "input": "node_modules/monaco-editor/esm/vs/editor/browser/widget/codeEditor", "output": "assets/monaco-editor/" }
+              { "glob": "**/*", "input": "node_modules/monaco-editor", "output": "assets/monaco/" }
             ],
             "styles": [
               "src/custom-theme.scss",
@@ -91,8 +90,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              { "glob": "**/*", "input": "node_modules/monaco-editor", "output": "assets/monaco/" },
-              { "glob": "**/*.css", "input": "node_modules/monaco-editor/esm/vs/editor/browser/widget/codeEditor", "output": "assets/monaco-editor/" }
+              { "glob": "**/*", "input": "node_modules/monaco-editor", "output": "assets/monaco/" }
             ],
             "styles": [
               "@angular/material/prebuilt-themes/pink-bluegrey.css",
