--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "loader":{
+            "loader": {
               ".ttf": "binary"
             },
             "outputPath": {
@@ -39,6 +39,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/pylab/",
               "budgets": [
                 {
                   "type": "initial",
