--- a/.github/workflows/angular-deploy.yml
+++ b/.github/workflows/angular-deploy.yml
@@ -27,6 +27,6 @@ jobs:
           git config --global user.email "${{ secrets.GH_EMAIL }}"
           git config --global user.name "${{ secrets.GH_NAME }}"
       - name: Deploy to GitHub Pages
-        run: npx angular-cli-ghpages --dir=dist/pylab-deploy --no-silent
+        run: npx angular-cli-ghpages --dir=dist/pylab --no-silent
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
