--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,8 @@
             ],
             "styles": [
               "src/custom-theme.scss",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/monaco-editor/min/vs/editor/editor.main.css"
             ],
             "scripts": []
           },
@@ -103,7 +104,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/monaco-editor/min/vs/editor/editor.main.css"
             ],
             "scripts": []
           }
