--- a/angular.json
+++ b/angular.json
@@ -44,6 +44,7 @@
           },
           "configurations": {
             "production": {
+              "sourceMap": true,
               "baseHref": "/pylab-test/",
               "budgets": [
                 {
